# mini_trading_simulator

./: 01_cargar_y_limpiar_csv.py  02_generar_señales.py  Bgenerar_senales.py  Ccuenta_de_trading.py  Dsimulador_ejecucion.py  Generar_senales.py  PROJECT_BRIEF.md  README.md  Resumen_final.py  Roadmap  precios.csv  pyproject.toml
src/: Simulador_ejecucion.py
